bitfield/tests/04-multiple-of-8bits.stderr
error[E0080]: evaluation of constant value failed
  --> tests/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ index out of bounds: the length is 1 but the index is 7
   |
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
